# flipbook

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/modal-backend/: .env.example  Dockerfile  README.md  config.py  generate.py  local_server.py  ltx_stream.py  ltxf.py  main.py  obs.py  pyproject.toml  requirements-dev.txt  requirements.txt  security.py
apps/modal-backend/providers/: __init__.py  _common.py  image.py  image_edit.py  llm.py  map_overlay.py  video.py
apps/modal-backend/tests/: conftest.py  test_api.py  test_deploy_files.py  test_image_provider.py  test_llm_provider.py  test_map_overlay.py  test_obs.py  test_security.py  test_siliconflow_integration.py
apps/web/: Dockerfile  instrumentation-client.ts  instrumentation.ts  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: InfographicRenderer.tsx  atlas-view.tsx  citations-chip.tsx  debug-hud.tsx  heatmap-overlay.tsx  permalink-image.tsx  recent-atlas-link.tsx  session-minimap.tsx  time-scrubber.tsx  waterfall-hud.tsx  world-map.tsx
apps/web/e2e/: click-to-next.spec.ts  deeplink.spec.ts  helpers.ts  style-pin.spec.ts
apps/web/hooks/: README.md  useFirstRunCoach.test.tsx  useFirstRunCoach.ts  useImageMorph.ts  useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  usePersistedLocale.ts  usePersistedTheme.test.tsx  usePersistedTheme.ts  usePersistedTier.test.tsx  usePersistedTier.ts  usePrefetchCache.test.tsx  usePrefetchCache.ts  useStyleAnchor.test.tsx  useStyleAnchor.ts  useStyleGalleryDismissed.test.tsx  useStyleGalleryDismissed.ts  useTraceEmitter.ts  useWorldState.test.tsx  useWorldState.ts
docs/: ARCHITECTURE.md  BYO-KEYS.md  DOCKER.md  LOCAL_DEV.md  STORY.md
infra/: MONGO.md
scripts/: Start-OpenFlipbook.ps1  bootstrap.sh
scripts/perfbudget/: budgets.json  package.json  run.ts
scripts/record-demo/: README.md  package.json  pnpm-lock.yaml  record.ts
(+65 files in other folders)
