[project]
name = "openflipbook-modal-backend"
version = "0.1.0"
description = "FastAPI/Modal backend for openflipbook — SSE page gen, click VLM, optional LTX GPU worker."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
# Light first pass — turn the strict knobs on after the first cleanup PR.
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (catches common pitfalls)
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "RUF",    # ruff-native rules
]
ignore = [
    "E501",   # line length — handled by formatter, not worth blocking on
    "B008",   # default-arg call (FastAPI Depends() pattern)
]

[tool.ruff.lint.per-file-ignores]
"providers/_common.py" = ["F401"]  # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.12"
# Start permissive on the whole tree; tighten module-by-module below.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

# Strict on the provider layer — that's the contract surface.
[[tool.mypy.overrides]]
module = ["providers.*", "obs"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# generate.py + ltx_stream.py + local_server.py are FastAPI/Modal entry
# points with framework-driven types; keep loose for now.
[[tool.mypy.overrides]]
module = ["generate", "ltx_stream", "local_server", "ltxf"]
disallow_untyped_defs = false
